--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -1,5 +1,5 @@
 name: app
-type: python:3.8
+type: python:3.9
 disk: 512
 
 hooks:
@@ -16,6 +16,6 @@ web:
 
 dependencies:
   python:
-    fastapi: "^0.68.1"
+    fastapi:
     uvicorn: "^0.15.0"
     gunicorn: "^20.1.0"
