--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ SQLAlchemy==2.0.21
 starlette==0.27.0
 typing_extensions==4.8.0
 ujson==5.8.0
-uvicorn==0.23.2
+uvicorn
 uvloop==0.17.0
 watchfiles==0.20.0
 websockets==11.0.3
